refactor(mapper): optimize SaleEntityMapper implementation
Replace verbose list collection with toList() method and remove Spring
component annotation along with unused imports for better code clarity.